--- a/casundo/myapp/templates/myApp/base.html
+++ b/casundo/myapp/templates/myApp/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}CourtCentral{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/list_courts.css' %}">
     {% block styles %}{% endblock %}
 </head>
 <body>
